# Rasa-Alizha-Chatbot

./: .gitignore  .rate_limit_state.json  README.md  app.py  mcp_servers.json  pyproject.toml  rate_limiter.py  requirements.txt  shared_utils.py  sitecustomize.py  startHere.md
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
AI/: app.py  aws_bedrock.py  mcp_servers.json  shared_utils.py
AI/architecture/: __init__.py  arabic_post_processor.py  code_executor.py  conversation_memory.py  document_manager.py  hybrid_router.py  llm_utils.py  logger.py  mcp_client.py  mcp_host.py  pre_router_guard.py  redis_client.py  registry.py  router.py  telemetry.py  tool_logger.py  unified_config.py
AI/auth/: models.py  rbac.py  routes.py
AI/benchmarks/: deepeval_benchmark.py  frontend_smoke.py
AI/config/: config.py  (+1 more)
API/: app.py
Vector/: app.py
Web/: app.py
architecture/: __init__.py  base_tool.py  code_executor.py  conversation_memory.py  document_manager.py  form_registry.py  hybrid_router.py  llm_utils.py  mcp_client.py  mcp_host.py  router.py  telemetry.py  tool_logger.py
auth/: __init__.py  models.py  rbac.py  routes.py
config/: config.py  mcp_servers_config.yml
docs/: ARCHITECTURE.md  Data.csv  seed_users.py  users_seed.csv
mcp_servers/: adaptive_card_server.py  brochure_server.py  knowledgebase_server.py  leave_server.py  secure_rag_server.py  sql_server.py  visualization_tool.py
plugins/: adaptive_card_tool.py  chat_tool.py  contact_form_tool.py  news_tool.py  survey_tool.py  weather_tool.py
rasa/: config.yml  domain.yml
(+118 files in other folders)
